# mentor-matching

./: .tmp_pr_body.md  Gemfile  LICENSE  README.md  csv_parser.rb  matching.rb  person.rb  preferences.rb  pyproject.toml  test-inputs.csv  test.csv
.claude/skills/mentor-matching/: SKILL.md
.claude/skills/mentor-matching-python/: SKILL.md
.claude/skills/mentor-matching/reference/: seniority-scale.md
lib/: application.rb  csv_parser.rb  csv_parser_2025.rb  matching.rb  person.rb  person_2025.rb  preferences.rb  previous_matches.rb
sorbet/rbi/: todo.rbi
sorbet/rbi/gems/: byebug@12.0.0.rbi  coderay@1.1.3.rbi  descriptive_statistics@2.5.1.rbi  parser@3.2.2.3.rbi  pp@0.6.2.rbi  prism@1.4.0.rbi  pry-byebug@3.11.0.rbi  pry@0.15.2.rbi  psych@5.2.6.rbi  rbi@0.0.17.rbi  rdoc@6.14.1.rbi  reline@0.6.1.rbi  rexml@3.4.1.rbi  spoom@1.2.1.rbi  spoom@1.6.3.rbi  tapioca@0.11.8.rbi  tapioca@0.16.11.rbi  thor@1.2.2.rbi  yard-sorbet@0.8.1.rbi  yard-sorbet@0.9.0.rbi  yard@0.9.34.rbi  yard@0.9.37.rbi
src/mentor_matching/: __init__.py  cli.py  csv_parser.py  csv_parser_2025.py  matching.py  models.py  preferences.py  previous_matches.py
test/: csv_parser_2025_test.rb  preferences_test.rb  previous_matches_test.rb
tests/: helpers.py  test_cli.py  test_csv_parser.py  test_csv_parser_2025.py  test_matching.py  test_preferences.py  test_previous_matches.py
