[project]
name = "mentor-matching"
version = "0.1.0"
description = "Typed Python port of the mentor matching program."
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
  "mypy>=1.17.0",
  "pytest>=8.4.0",
]

[project.scripts]
mentor-matching = "mentor_matching.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mentor_matching"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["mentor_matching"]
